--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 
         <footer>
             <p>Desarrollado por <strong>Alejandro Osorio</strong> |
-            <a href="https://github.com/aleosorio22/Ejercicio3" target="_blank">
-                <i class="bi bi-github"></i> Ver en GitHub
+            <a href="https://github.com/aleosorio22/EjerciciosPilas" target="_blank">
+                <i class="bi bi-github"></i> Ver repositorio en GitHub
             </a></p>
         </footer>
     </div>
